{
  "version": 4,
  "terraform_version": "0.12.30",
  "serial": 28,
  "lineage": "5b6d56c9-29c7-577e-641f-35f177ec0277",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "peter_terraform_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ada31815ea20e9d9",
            "arn": "arn:aws:ec2:us-west-1:205943798376:instance/i-0dd93cd94a5cefaf3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd93cd94a5cefaf3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_ed25519_peter",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09ddef1374b47d1af",
            "private_dns": "ip-10-87-1-228.us-west-1.compute.internal",
            "private_ip": "10.87.1.228",
            "public_dns": "ec2-13-57-28-219.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.28.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c9c06176d47a64f2",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c9320265a689e3b8",
            "tags": {
              "Name": "peter_ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07b3a8673f725c244"
            ]
          },
          "dependencies": [
            "aws_key_pair.peter_terraform_keypair",
            "aws_security_group.peter_terrform_security_group",
            "aws_subnet.peter_terraform_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "peter_terraform_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:205943798376:internet-gateway/igw-0bdba8452362a0648",
            "id": "igw-0bdba8452362a0648",
            "owner_id": "205943798376",
            "tags": {
              "Name": "peter_terraform_internet_gateway"
            },
            "vpc_id": "vpc-015e00a2f2442a50d"
          },
          "dependencies": [
            "aws_vpc.peter_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "peter_terraform_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bdba8452362a0648",
            "id": "r-rtb-0bcc6b48c2e586b4d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bcc6b48c2e586b4d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.peter_terraform_internet_gateway",
            "aws_route_table.peter_terraform_route_table",
            "aws_vpc.peter_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "peter_terraform_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:205943798376:route-table/rtb-0bcc6b48c2e586b4d",
            "id": "rtb-0bcc6b48c2e586b4d",
            "owner_id": "205943798376",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bdba8452362a0648",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "peter_route_table"
            },
            "vpc_id": "vpc-015e00a2f2442a50d"
          },
          "dependencies": [
            "aws_vpc.peter_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "peter_terraform_rt_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d5cd04b5629723e",
            "route_table_id": "rtb-0bcc6b48c2e586b4d",
            "subnet_id": "subnet-0c9320265a689e3b8"
          },
          "dependencies": [
            "aws_route_table.peter_terraform_route_table",
            "aws_subnet.peter_terraform_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "peter_terrform_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:205943798376:security-group/sg-07b3a8673f725c244",
            "description": "peter security group using terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b3a8673f725c244",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "peter_security_group",
            "name_prefix": "",
            "owner_id": "205943798376",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-015e00a2f2442a50d"
          },
          "dependencies": [
            "aws_vpc.peter_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "peter_terraform_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:205943798376:subnet/subnet-0c9320265a689e3b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.87.1.0/24",
            "id": "subnet-0c9320265a689e3b8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "205943798376",
            "tags": {
              "Name": "peter_public_subnet"
            },
            "tags_all": {
              "Name": "peter_public_subnet"
            },
            "vpc_id": "vpc-015e00a2f2442a50d"
          },
          "dependencies": [
            "aws_vpc.peter_terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "peter_terraform_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:205943798376:vpc/vpc-015e00a2f2442a50d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.87.0.0/16",
            "default_network_acl_id": "acl-0469e05c5662dd155",
            "default_route_table_id": "rtb-09b4eb2ae103e8c42",
            "default_security_group_id": "sg-036a70ce99681013e",
            "dhcp_options_id": "dopt-0a86732bf370bbeeb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-015e00a2f2442a50d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09b4eb2ae103e8c42",
            "owner_id": "205943798376",
            "tags": {
              "Name": "peter_vpc"
            },
            "tags_all": {
              "Name": "peter_vpc"
            }
          }
        }
      ]
    }
  ]
}